# glyph

./: .gitignore  .glyph.example.yaml  CLAUDE.md  LICENSE  README.md  action.yml  glyph.example.yaml  pyproject.toml  ragify.example.yaml
glyph/: __main__.py  config.py  pipeline.py  server.py
glyph/chunkers/: api_chunker.py  base.py  source_code_chunker.py  text_chunker.py  unreal_doc_chunker.py
glyph/chunkers/_parsers/: __init__.py  cpp_parser.py  gdscript_parser.py  glsl_parser.py  go_parser.py  hlsl_parser.py  python_parser.py  rust_parser.py  typescript_parser.py  usf_parser.py
glyph/domain/: __init__.py  models.py
glyph/embedders/: base.py  llama.py
glyph/exporters/: markdown.py
glyph/ingestors/: __init__.py  base.py  docs.py  godot_xml.py  html.py  source_code.py  unreal_doc.py
glyph/rerankers/: __init__.py  base.py  llama.py
glyph/store/: __init__.py  postgres.py
ragify/: __main__.py  server.py
ragify/chunkers/: __init__.py  api_chunker.py  base.py  source_code_chunker.py  text_chunker.py
ragify/chunkers/_parsers/: __init__.py  gdscript_parser.py  (+4 more)
ragify/domain/: models.py
ragify/embedders/: __init__.py
ragify/exporters/: __init__.py
ragify/ingestors/: base.py  godot_xml.py  html.py  source_code.py
ragify/store/: postgres.py
tests/: conftest.py  test_config.py  test_embedder.py  test_html_ingestor.py  test_hybrid_search.py  test_parsers.py  test_server.py
tests/fixtures/: sample.frag  sample.gd  sample.gdshader  sample.go  sample.hlsl  sample.py  sample.rs  sample.ts  sample.usf
tests/rerankers/: test_llama_reranker.py
(+2 files in other folders)
