[project]
name = "glyph"
version = "0.1.0"
description = "Convert API documentation into structured RAG knowledge bases"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Diego Camizotti"}]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "asyncpg>=0.29",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pyyaml>=6.0",
    "click>=8.1",
    "tree-sitter>=0.24",
    "tree-sitter-python>=0.23",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-rust>=0.24.2",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-cpp>=0.23",
    "mcp[cli]>=1.26.0",
]

[project.urls]
Homepage = "https://github.com/terminus-labs-ai/glyph"
Repository = "https://github.com/terminus-labs-ai/glyph"
Issues = "https://github.com/terminus-labs-ai/glyph/issues"

[project.scripts]
glyph = "glyph.__main__:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
